Updated data analysis with python

--- a/cars.ipynb
+++ b/cars.ipynb
@@ -1510,7 +1510,7 @@
    ],
    "source": [
     "# Showing the violin plot of the two dataset\n",
-    "sns.violinplot(x=data_car[\"Vehicle Size\"], y=data_car[\"Number of Doors\"],palette='Blues')"
+    "sns.violinplot(x=data_car[\"Vehicle Size\"], y=data_car[\"Number of Doors\"],palette='Blues')  #the color must start with capital letter and end with 's'."
    ]
   },
   {
